mobile toggle dark mode fix

--- a/webroot/css/mobile-frontend.css
+++ b/webroot/css/mobile-frontend.css
@@ -32,6 +32,7 @@
         width: 100% ! important;
     }
     .color-mode-toggle {
+        margin-top: 0;
         float: none;
     }
     .cookieConsentWrapper {
